<resources>
    <string name="app_name">Xmas Libs</string>
    <string name="location1">Santa\'s Sleigh</string>
    <string name="location2">The North Pole</string>
    <string name="location3">Elves\' Workshop</string>
    <string name="loc3">Elves Workshop</string>
    <string name="loc1" />
    <string name="loca1">Santas Sleigh</string>
    <string name="hintAdj">adjective</string>
    <string name="editName">name</string>
    <string name="editNoun">noun</string>
    <string name="editPlace">a place</string>
    <string name="editDrink">drink</string>
    <string name="editVerb">verb</string>
    <string name="generateStory">Tell me my story</string>
    <string name="editThing">a thing</string>
    <string name="loc2">North Pole</string>
    <string name="placeEdit">a city</string>
</resources>