<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="333dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D32B2B"
            android:fontFamily="@font/cherry_swash"
            android:onClick="sleigh"
            android:text="@string/loca1"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D32B2B"
            android:fontFamily="@font/cherry_swash"
            android:onClick="pole"
            android:text="@string/loc2"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#D32B2B"
            android:fontFamily="@font/cherry_swash"
            android:onClick="elf"
            android:text="@string/loc3"
            android:textSize="12sp" />
    </RadioGroup>

    <Button
        android:id="@+id/storyButton"
        android:layout_width="181dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#D33434"
        android:fontFamily="@font/comfortaa"
        android:onClick="story"
        android:text="@string/generateStory"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDrink"
        app:strokeColor="#C80404" />

    <EditText
        android:id="@+id/editPlace"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/placeEdit"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/editAdjective"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editAdjective"
        app:layout_constraintTop_toBottomOf="@+id/editAdjective" />

    <EditText
        android:id="@+id/editAdjective"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/hintAdj"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editThing"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginEnd="9dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/editThing"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editDrink"
        app:layout_constraintEnd_toEndOf="@+id/editNoun"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNoun"
        app:layout_constraintTop_toTopOf="@+id/editDrink"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editDrink"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/editDrink"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editPlace"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toTopOf="@+id/editPlace"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editNoun"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/editNoun"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/cherry_swash"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/editAdjective"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="115dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/editName"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editAdjective"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/storyText"
        android:layout_width="329dp"
        android:layout_height="253dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@color/white"
        android:fontFamily="@font/comfortaa2"
        android:maxLines="16"
        android:textAlignment="center"
        android:textSize="14sp"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>